Product controller and routes and many other changes in the existing files

--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,4 +1,9 @@
 MONGO_URI="mongodb+srv://kaushikvarma2003:Rockstar%4024@cluster0.yxjsgt4.mongodb.net"
 CLOUDINARY_API_KEY="728732255193166"
-CLOUDINARY_SECRET_key="cQRFZnIqson9l8ik2Cv2xdHRbko"
+CLOUDINARY_SECRET_KEY="cQRFZnIqson9l8ik2Cv2xdHRbko"
 CLOUDINARY_NAME="dzhzoziad"
+JWT_SECRET="luxeAura"
+JWT_EXPIRES_IN="3d"
+PORT=4000
+ADMIN_EMAIL="admin@luxeaura.com"
+ADMIN_PASSWORD="admin123"
